--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.3",
     "vite-plugin-svgr": "^4.2.0"
@@ -28,6 +27,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   },
