--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@zerodev/passkey-validator": "^5.2.3",
     "@zerodev/sdk": "^5.2.10",
     "autoprefixer": "^10.4.19",
+    "permissionless": "^0.1.21",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.4.3",
+    "viem": "^2.9.28",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
