📦 events 패키지 설치

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@zerodev/passkey-validator": "^5.2.3",
     "@zerodev/sdk": "^5.2.10",
     "autoprefixer": "^10.4.19",
+    "events": "^3.3.0",
     "permissionless": "^0.1.21",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@types/events": "^3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-transition-group": "^4",
