--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.4.3",
     "viem": "^2.9.28",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "web3-utils": "^4.2.3"
   },
   "devDependencies": {
     "@types/events": "^3",
