--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5",
+    "snarkjs": "^0.7.4",
     "tailwindcss": "^3.4.3",
     "viem": "^2.9.28",
     "vite-plugin-svgr": "^4.2.0",
@@ -36,6 +37,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-transition-group": "^4",
+    "@types/snarkjs": "^0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
