--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zerodev/sdk": "^5.2.10",
     "autoprefixer": "^10.4.19",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "events": "^3.3.0",
     "permissionless": "^0.1.21",
     "postcss": "^8.4.38",
@@ -33,6 +34,7 @@
     "web3-utils": "^4.2.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4",
     "@types/events": "^3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
