--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
+    "ethers": "^6.12.1",
     "events": "^3.3.0",
     "permissionless": "^0.1.21",
     "postcss": "^8.4.38",
