--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "snarkjs": "^0.7.4",
     "tailwindcss": "^3.4.3",
     "viem": "^2.9.28",
-    "vite-plugin-svgr": "^4.2.0",
-    "web3-utils": "^4.2.3"
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4",
