--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.2.0",
     "ethers": "^6.12.1",
     "events": "^3.3.0",
+    "jotai": "^2.8.3",
     "permissionless": "^0.1.21",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
