--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
+    "@noble/curves": "^1.4.0",
+    "@zerodev/ecdsa-validator": "^5.2.3",
     "@zerodev/passkey-validator": "^5.2.3",
+    "@zerodev/permissions": "^5.2.10",
     "@zerodev/sdk": "^5.2.10",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
@@ -33,7 +36,7 @@
     "react-transition-group": "^4.4.5",
     "snarkjs": "^0.7.4",
     "tailwindcss": "^3.4.3",
-    "viem": "^2.9.28",
+    "viem": "^2.14.2",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
